--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,12 +5,20 @@
 
 <web-app xmlns="http://java.sun.com/xml/ns/javaee" version="2.5">
     <servlet>
-        <servlet-name>main</servlet-name>
-        <servlet-class>myapp.MainServlet</servlet-class>
+        <servlet-name>countries</servlet-name>
+        <servlet-class>myapp.CountryServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>results</servlet-name>
+        <servlet-class>myapp.ResultServlet</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>main</servlet-name>
-        <url-pattern>/main</url-pattern>
+        <servlet-name>countries</servlet-name>
+        <url-pattern>/countries</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>results</servlet-name>
+        <url-pattern>/results</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
