--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,12 @@
             <version>${appengine.target.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.7.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
       
     <build>
