--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,6 +16,10 @@
         <servlet-name>ranks</servlet-name>
         <servlet-class>myapp.RankServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>elo</servlet-name>
+        <servlet-class>myapp.EloServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>countries</servlet-name>
         <url-pattern>/countries</url-pattern>
@@ -27,6 +31,10 @@
     <servlet-mapping>
         <servlet-name>ranks</servlet-name>
         <url-pattern>/ranks</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>elo</servlet-name>
+        <url-pattern>/elo</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
